config: add ollama properties for dynamic selection